test/files/neg/xmltruncated3.scala
object Main {
  val stuff = <a unclosedattr="aaaa
