test/files/neg/xmltruncated3.check
xmltruncated3.scala:2: error: input ended while parsing XML
  val stuff = <a unclosedattr="aaaa
                                   ^
1 error
